syntax = "proto3";
  
package caber.macaron;

import "data/proto/activity/activity_timestamp.proto";

// Represents trading activity.
message TradingActivity {
  // A global unique ID for this finance entity.
	int32 fin_entity_id = 1;

	// Timestamp when activity happens.
	ActivityTimestamp activity_timestamp = 2;

	// Price of the trading.
	float price = 3;
}
