syntax = "proto3";
  
package caber.macaron;

import "data/proto/trait.proto";

// Represents a finance entity.
message FinEntity {
  // A global unique ID for this finance organization.
	int32 id = 1;

	// A name to identify this organization.
  string name = 2;

	// Attributions
  oneof trait {
		// Common traits associated with this org.
		CommonTrait common_trait = 1;
		// Geographics traits associated with this org.
		GeoTrait geo_trait = 2;
		// Demographics traits associated with this org.
		DemoTrait demo_trait = 3;
		// Traits related to sector that this org belongs to.
		SectorTrait sector_trait = 4;
	}

	repeated Trait traits = 3;
}
